Add Observability and improve the code